--- a/views/users/forgetpasswordotp.ejs
+++ b/views/users/forgetpasswordotp.ejs
@@ -34,16 +34,20 @@
     <div class="container-fluid  bodylog">
         <div class="col-sm-6 text-black">
           <div class="d-flex align-items-center justify-content-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
-            <form action="your-otp-submission-url" method="post" style="width: 50rem;">
+            <form  style="width: 50rem;">
               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; text-align: center; font-weight:bold; font-family:Marmelad,sans-serif;">Enter the OTP</h3>
               <div data-mdb-input-init class="form-outline mb-4">
                 <label class="form-label" for="form2Example18">OTP</label>
-                <input type="text" id="form2Example18" class="form-control form-control-lg" />
+                <input  name="otp" type="text" id="otp" class="form-control form-control-lg" />
+              </div>
+              <p id="otpError" class="errormessage"></p>
+              <div style="display: flex;">
+                <p  class="small mb-5 pb-lg-2 text-muted resendBtn" style=" display: none;" >Resend OTP</p>
+                <p  class="small mb-5 pb-lg-2 text-muted resendTimer" >Resend OTP in : <span class="otpText">00:59</span></p>
               </div>
               <div class="pt-1 mb-4" style="display: flex; justify-content: center;">
-                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Submit</button>
+                <button id="Verifiy-OTP-btn"  data-mdb-button-init data-mdb-ripple-init class="Verifiy-OTP-btn" ><span class="otp-btn-text">Verifiy-OTP</span></button>
               </div>
-              <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Resend OTP</a></p>
             </form>
           </div>
         </div>
@@ -54,5 +58,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/tiny-slider.js"></script>
   <script src="js/custom.js"></script>
+  <script src="/js/users/fotp-validation.js"></script>
 </body>
 </html>
