--- a/views/users/forgotpasswordemailverification.ejs
+++ b/views/users/forgotpasswordemailverification.ejs
@@ -37,13 +37,13 @@
               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px; text-align: center; font-weight:bold; font-family:Marmelad,sans-serif;">Verify your Email</h3>
               <div data-mdb-input-init class="form-outline mb-4">
                 <label class="form-label" for="form2Example18">Email</label>
-                <input  name="otp" type="text" id="otp" class="form-control form-control-lg" />
+                <input  name="email" type="text" id="email" class="form-control form-control-lg" />
               </div>
-              <p id="otpError" class="errormessage"></p>
+              <p id="emailError" class="errormessage"></p>
               <div style="display: flex;">
               </div>
               <div class="pt-1 mb-4" style="display: flex; justify-content: center;">
-                <button id="Verifiy-OTP-btn"  data-mdb-button-init data-mdb-ripple-init class="Verifiy-OTP-btn" ><span class="otp-btn-text">Verifiy-Email</span></button>
+                <button id="Verifiy-forgot-email"  data-mdb-button-init data-mdb-ripple-init class="Verifiy-OTP-btn" ><span class="otp-btn-text">Verifiy-email</span></button>
               </div>
             </form>
           </div>
@@ -56,5 +56,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/tiny-slider.js"></script>
   <script src="js/custom.js"></script>
+  <script src="/js/users/emailverification.js"></script>
 </body>
 </html>
