--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -91,7 +91,7 @@
     <script src="js/tiny-slider.js"></script>
     <script src="js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
-    <script src="/js/users/toggle.js"></script>
+    <script src="/js/users/regpasstoggle.js"></script>
     <script src="/js/users/regvalidation.js"></script>
 
   </body>
