--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -5,21 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Admin Panel</title>
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link href="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.css" rel="stylesheet">
     <!-- Layout styles -->
     <link rel="stylesheet" href="/css/admin.css">
-    <!-- End layout styles -->
-    <!-- <link rel="shortcut icon" href="assets/images/favicon.png" /> -->
   </head>
   <body>
     <div class="container-scroller">
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-          <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB</a>
-          <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+          <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB </a>
+          <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <ul class="nav">
           <li class="nav-item menu-items">
@@ -59,7 +59,7 @@
         <!-- partial:partials/_navbar.html -->
         <nav class="navbar p-0 fixed-top d-flex flex-row">
           <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg" alt="logo" /></a>
+            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/images/logo-mini.svg" alt="logo" /></a>
           </div>
           <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
@@ -86,7 +86,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/images/faces/face4.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">Mark send you a message</p>
@@ -96,7 +96,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/images/faces/face2.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">Cregh send you a message</p>
@@ -106,7 +106,7 @@
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item preview-item">
                     <div class="preview-thumbnail">
-                      <img src="assets/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic">
+                      <img src="/images/faces/face3.jpg" alt="image" class="rounded-circle profile-pic">
                     </div>
                     <div class="preview-item-content">
                       <p class="preview-subject ellipsis mb-1">Profile picture updated</p>
@@ -207,28 +207,51 @@
                 <h4 class="card-title">Order Status</h4>
                 <div class="table-responsive">
                   <form class="nav-link mt-2 mt-md-0  d-lg-flex search">
-                    <input type="text" class="form-control" placeholder="Search users">
-                    <button style="height: 33px;margin: 3px 0px 0px 10px;" class="btn btn-primary" >Search</button>
+                    <div style="display: flex;">
+                      <button
+                        style="height: 33px; margin: 3px 0px 0px 10px"
+                        class="btn btn-primary"
+                      >
+                        Search
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-primary btn-addProductModal"
+                        data-bs-toggle="modal"
+                        data-bs-target="#productUploadModal"
+                      >
+                        Add Category
+                      </button>
+                    </div>
                   </form>
                   <table class="table">
                     <thead>
                       <tr>
-                        <th> Username</th>
-                        <th> Email</th>
-                        <th> Ban </th>
-                        
+                        <th> No </th>
+                        <th> Image</th>
+                        <th> Name</th>
+                        <th> Products Count</th>
+                        <th> Unlist </th>
+                        <th> Update </th>
                       </tr>
                     </thead>
                     <tbody>
-                      <% user.forEach((value) => { %>
+                      <% category.forEach((data,index)=>{ %>
                         <tr>
-                          <td> <%= value.userName %> </td>
-                          <td> <%= value.email %> </td>
+                          <td> <%= index+1 %> </td>
                           <td>
-                            <div data-id="<%= value._id  %>" class="badge <%= value.isDeleted?'badge-outline-primary':'badge-outline-danger' %> btn-ban"><%= value.isDeleted?'Unban':'Ban' %></div>
+                            <img src="/<%= data.image %>" alt="image" />
+                          </td>
+                          <td> <%= data.name  %> </td>
+                          <td> <%= data.productCount  %> </td>
+                          <td>
+                            <div data-id="<%= data._id  %>" class="badge badge-outline-primary">Unlist</div>
+                          </td>
+                          <td>
+                            <div data-id="<%= data._id %>" class="badge badge-outline-warning">Update</div>
                           </td>
                         </tr>
-                      <% }); %>
+                      <% }) %>
                     </tbody>
                   </table>
                 </div>
@@ -236,16 +259,123 @@
             </div>
           </div>
         </div>
-        <div style="margin-top:100px ;" class="col-md-4 grid-margin stretch-card userInfoView">
-          
+        <div
+        class="modal fade"
+        id="productUploadModal"
+        tabindex="-1"
+        aria-labelledby="productUploadModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog w-100 modal-lg product-modal">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="productUploadModalLabel">
+                Add New Category
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form class="forms-sample" id="categoryForm" enctype="multipart/form-data" novalidate>
+                <input style="display: none;" type="file" class="category-image" required />
+                <div class="form-group">
+                  <label for="category">Name</label>
+                  <input
+                    type="text"
+                    class="form-control category-name"
+                    id="categoryName" 
+                    name="name"
+                    placeholder="Category Name"
+                    required
+                  />
+                  <p class="error-message" id="categoryNameError"></p>
+                </div> 
+                <div class="form-group">
+                  <label for="categoryImage">Images</label>
+                  <input type="file" class="form-control category-image" id="categoryImage" accept="image/*" onchange="previewAndCrop(event)">
+                  <p class="error-message" id="categoryImageError"></p>
+                </div>
+                <div class="form-group previewSection">
+                  <img id="cropPreview" style="max-width: 100%; display: none;" />
+                  <button type="button" id="cropButton" style="display: none;" onclick="startCropping()">Crop Image</button>
+                </div>
+                <div class="form-group">
+        
+                <button type="submit" class="btn btn-primary mt-3">
+                  Create
+                </button>
+              </form>
+            </div>
           </div>
         </div>
-        <!-- main-panel ends -->
       </div>
-      <!-- page-body-wrapper ends -->
-    </div>>
+
+      <div
+      class="modal fade"
+      id="categoryUpdateModal"
+      tabindex="-1"
+      aria-labelledby="categoryUpdateModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog w-100 modal-lg product-modal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="categoryUpdateModalLabel">
+              Update  New Category
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form class="forms-sample" id="categoryForm" enctype="multipart/form-data" novalidate>
+              <input style="display: none;" type="file" class="category-image" required />
+              <div class="form-group">
+                <label for="category">Name</label>
+                <input
+                  type="text"
+                  class="form-control category-name"
+                  id="categoryName" 
+                  name="name"
+                  placeholder="Category Name"
+                  required
+                />
+                <p class="error-message" id="categoryNameError"></p>
+              </div> 
+              <div class="form-group">
+                <label for="categoryImage">Images</label>
+                <input type="file" class="form-control category-image" id="categoryImage" accept="image/*" onchange="previewAndCrop(event)">
+                <p class="error-message" id="categoryImageError"></p>
+              </div>
+              <div class="form-group previewSection">
+                <img id="cropPreview" style="max-width: 100%; display: none;" />
+                <button type="button" id="cropButton" style="display: none;" onclick="startCropping()">Crop Image</button>
+              </div>
+              <div class="form-group">
+      
+              <button type="submit" class="btn btn-primary mt-3">
+                Create
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+</div>
+
+    <script src="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom js for this page -->
-    <script src="/js/admin/usermanagement.js"></script>
+    <script src="/js/admin/category.js"></script>
     <!-- End custom js for this page -->
  </body>
 </html>
