--- a/views/users/forgotpassword.ejs
+++ b/views/users/forgotpassword.ejs
@@ -28,13 +28,13 @@
     <div class="login-container">
       <h2>FORGOT PASSWORD</h2>
       <form id="loginform">
-        <label for="current-password"></label>
-        <input type="password"  name="current-password" id="current-password" placeholder="Your current-password" >
-        <p id="currentPasswordError" class="errormessage"></p>
-        <label for="new-password"></label>
-        <input type="password" id="new-password" name="new-password" placeholder="Enter you new password">
+        <label for="newPassword"></label>
+        <input type="password"  name="newPassword" id="newPassword" placeholder="Enter the new Password" >
         <p id="newPasswordError" class="errormessage"></p>
-        <button id="loginBtn">Change Password</button>
+        <label for="confirmPassword"></label>
+        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your new password">
+        <p id="confirmPasswordError" class="errormessage"></p>
+        <button id="loginBtn" class="fSubmit">submit</button>
       </form>
     </div>
 
