--- a/views/users/starting.ejs
+++ b/views/users/starting.ejs
@@ -38,7 +38,7 @@
   </head>
 
   <body>
-   
+  
     <nav class="custom-navbar navbar navbar navbar-expand-md" arial-label="Furni navigation bar" >
       <div class="container">
         <div id="navlogo" >
@@ -68,12 +68,12 @@
             <li><a class="nav-link" href="/services">Services</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
           </ul>
-          <!-- <ul class="neddit">
+          <ul class="neddit">
             <li class="neddit1">
-              <p style="margin-left: 11px; margin-bottom:0; color:rgb(185, 182, 182)">Welcome</p>
-              <p style="color: rgb(185, 182, 182);">/</p>
+              <a style="text-decoration: none;" href="/login"><p style="margin-left: 11px; margin-bottom:0; color:rgb(185, 182, 182); text-decoration: none;">login/Register</p></a>
+              
             </li>
-          </ul> -->
+          </ul>
     
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li>
@@ -83,7 +83,6 @@
             </li>
             <li>
               <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
-             
             </li>
             <li>
               <a class="nav-link" href="cart.html"
