--- a/views/users/forgotpassword.ejs
+++ b/views/users/forgotpassword.ejs
@@ -26,20 +26,25 @@
   <%- include("./layouts/header.ejs") %>
       
     <div class="login-container">
-      <h2>FORGOT PASSWORD</h2>
-      <form id="loginform">
+    <h2>FORGOT PASSWORD</h2>
+    <form id="loginform">
         <label for="newPassword"></label>
-        <input type="password"  name="newPassword" id="newPassword" placeholder="Enter the new Password" >
-        <p id="newPasswordError" class="errormessage"></p>
-        <label for="confirmPassword"></label>
-        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your new password">
-        <p id="confirmPasswordError" class="errormessage"></p>
-        <button id="loginBtn" class="fSubmit">submit</button>
-      </form>
-    </div>
-
+        <div class="password-container">
+            <input type="password" name="newPassword" id="newPassword" placeholder="Enter the new Password">
+            <i class="fa fa-eye-slash toggle-password" id="togglePassword" onclick="togglePasswordVisibility()"></i>
         </div>
-      </section>
+        <p id="newPasswordError" class="errormessage"></p>
+
+        <label for="confirmPassword"></label>
+        <div class="password-container">
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your new password">
+            <i class="fa fa-eye-slash toggle-password" id="toggleConfirmPassword" onclick="toggleConfirmPasswordVisibility()"></i>
+        </div>
+        <p id="confirmPasswordError" class="errormessage"></p>
+
+        <button id="loginBtn" class="fSubmit">Submit</button>
+    </form>
+</div>
 
 
       <%- include("./layouts/footer.ejs") %>
@@ -49,5 +54,6 @@
       <script src="js/tiny-slider.js"></script>
       <script src="js/custom.js"></script>
       <script src="js/users/forgotpasswordvalidation.js"></script>
+      <script src="js/users/fpasstoggle.js"></script>
   </body>
 </html>
