--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -195,8 +195,7 @@
                 src="/images/img/shorts/denim-shorts-black-03-removebg-preview.png"
                 class="img-fluid product-thumbnail"
               />
-              <h3 class="product-title">Ergonomic Chair</h3>
-              <strong class="product-price">$43.00</strong>
+              <h3 class="product-title">Shorts</h3>
 
               <span class="icon-cross">
                 <img src="/images/cross.svg" class="img-fluid" />
