--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1539,6 +1539,129 @@ margin-top:9px
 }
 
 
+/* Style for the lightbox */
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+}
+
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+} */
+
+
+
+.shopcontainer {
+  display: flex;
+}
+
+.sidebar {
+  width: 20%;
+  padding: 10px;
+  background-color: #fff;
+  border-right: 1px solid #ddd;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+}
+
+.filter-section {
+  margin-bottom: 20px;
+}
+
+.filter-section h3 {
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+}
+
+.filter-section ul {
+  list-style: none;
+}
+
+.filter-section ul li {
+  margin-bottom: 5px;
+}
+
+.filter-section input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+}
+
+.sizes span {
+  display: inline-block;
+  margin-right: 10px;
+  background-color: #ddd;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.product-grid {
+  width: 80%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 20px;
+  background-color: #f5f5f5;
+}
+
+.product-card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  text-align: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.product-card:hover {
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.product-card p {
+  font-size: 1rem;
+  margin: 10px 0;
+}
+
+.product-card span {
+  font-weight: bold;
+  color: #333;
+}
+
+.planebutton {
+  background: #3b5d50;
+  border: none;
+  border-radius: 5px;
+  width: 63px;
+  height: 38px;
+  margin-top: 4px;
+  color: rgb(255 255 255);
+}
 
 
 
