--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -34,7 +34,7 @@
         <div
           class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top"
         >
-          <a class="sidebar-brand brand-logo" href="index.html">MEM'S HUB</a>
+          <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB</a>
           <a class="sidebar-brand brand-logo-mini" href="index.html"
             ><img src="assets/images/logo-mini.svg" alt="logo"
           /></a>
