--- a/views/users/layouts/footer.ejs
+++ b/views/users/layouts/footer.ejs
@@ -33,8 +33,8 @@
               />
             </div>
             <div class="col-auto">
-              <button class="btn btn-primary">
-                <span class="fa fa-paper-plane"></span>
+              <button class="  planebutton">
+                <span class="fa fa-paper-plane ">send</span>
               </button>
             </div>
           </form>
