--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -1,203 +1,42 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="author" content="Untree.co" />
-    <link rel="shortcut icon" href="favicon.png" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shop - Products</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <!-- <link rel="stylesheet" href="/css/shop.css"> -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="bootstrap, bootstrap4" />
+  
+</head>
+<body>
+  <%- include("./layouts/header.ejs") %>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link href="/css/tiny-slider.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
-    </title>
-  </head>
 
-  <body>
-    <%- include("./layouts/header.ejs") %>
-
-    <!-- Start Hero Section -->
-    <div class="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-5">
-            <div class="intro-excerpt">
-              <h1>Shop</h1>
-            </div>
-          </div>
-          <div class="col-lg-7"></div>
-        </div>
-      </div>
-    </div>
-    <!-- End Hero Section -->
-
-    <div class="untree_co-section product-section before-footer-section">
-      <div class="container">
-        <div class="row">
-          <!-- Start Column 1 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-3.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Nordic Chair</h3>
-              <strong class="product-price">$50.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
+  <div class="container shopcontainer">
+    <!-- Product Grid -->
+    <section class="product-grid">
+      <% if (products && products.length > 0) { %>
+        <% products.forEach(function(product) { %>
+          <div class="product-card">
+            <a href="/productDetails/<%= product._id %>">
+              <img src="/<%= product.images[0] %>" alt="<%= product.name %>">
+              <p><%= product.name %></p>
+              <span>₹<%= product.offerPrice ? product.offerPrice : product.price %></span>
             </a>
           </div>
-          <!-- End Column 1 -->
+        <% }); %>
+      <% } else { %>
+        <p>No products found.</p>
+      <% } %>
+    </section>
+    
+    
+  </div>
 
-          <!-- Start Column 2 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-1.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Nordic Chair</h3>
-              <strong class="product-price">$50.00</strong>
+  <%- include("./layouts/footer.ejs") %>
 
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 2 -->
-
-          <!-- Start Column 3 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-2.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Kruzo Aero Chair</h3>
-              <strong class="product-price">$78.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 3 -->
-
-          <!-- Start Column 4 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-3.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Ergonomic Chair</h3>
-              <strong class="product-price">$43.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 4 -->
-
-          <!-- Start Column 1 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-3.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Nordic Chair</h3>
-              <strong class="product-price">$50.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 1 -->
-
-          <!-- Start Column 2 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-1.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Nordic Chair</h3>
-              <strong class="product-price">$50.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 2 -->
-
-          <!-- Start Column 3 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-2.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Kruzo Aero Chair</h3>
-              <strong class="product-price">$78.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 3 -->
-
-          <!-- Start Column 4 -->
-          <div class="col-12 col-md-4 col-lg-3 mb-5">
-            <a class="product-item" href="#">
-              <img
-                src="images/product-3.png"
-                class="img-fluid product-thumbnail"
-              />
-              <h3 class="product-title">Ergonomic Chair</h3>
-              <strong class="product-price">$43.00</strong>
-
-              <span class="icon-cross">
-                <img src="images/cross.svg" class="img-fluid" />
-              </span>
-            </a>
-          </div>
-          <!-- End Column 4 -->
-        </div>
-      </div>
-    </div>
-
-    <%- include("./layouts/footer.ejs") %>
-
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/custom.js"></script>
-  </body>
+  <script src="/js/users/shop.js"></script>
+</body>
 </html>
