--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -15521,30 +15521,36 @@ input:focus {
   border-color: transparent;
   outline: none; }
 
-/* Fonts */
+/* Fonts
 @font-face {
   font-family: 'Rubik';
-  font-weight: 300;
-  src: url("../fonts/Rubik/Rubik-Light.ttf");
-  /* IE9 Compat Modes */ }
-
-@font-face {
-  font-family: 'Rubik';
-  font-weight: 400;
-  src: url("../fonts/Rubik/Rubik-Regular.ttf");
-  /* IE9 Compat Modes */ }
-
-@font-face {
-  font-family: 'Rubik';
+  src: url('/fonts/Rubik/Rubik-Medium.ttf') format('truetype');
   font-weight: 500;
-  src: url("../fonts/Rubik/Rubik-Medium.ttf");
-  /* IE9 Compat Modes */ }
+  font-style: normal;
+}
+
 
 @font-face {
   font-family: 'Rubik';
-  font-weight: 700;
-  src: url("../fonts/Rubik/Rubik-Bold.ttf");
-  /* IE9 Compat Modes */ }
+  src: url('/fonts/Rubik/Rubik-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Rubik';
+  src: url('/fonts/Rubik/Rubik-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Rubik';
+  src: url('/fonts/Rubik/Rubik-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+} */
 
 /* Backgrounds  */
 .bg-gradient-primary {
@@ -21167,7 +21173,6 @@ div.tagsinput {
 
 
 
-
 .pagination {
   display: flex;
   justify-content: center;
@@ -21195,3 +21200,5 @@ div.tagsinput {
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
 }
+
+
