--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -5,35 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop - Products</title>
   <link rel="stylesheet" href="/css/style.css">
-  <!-- <link rel="stylesheet" href="/css/shop.css"> -->
+  <link rel="stylesheet" href="/css/shop.css">
   <link href="/css/bootstrap.min.css" rel="stylesheet" />
-
-  
 </head>
 <body>
   <%- include("./layouts/header.ejs") %>
 
-
-  <div class="container shopcontainer">
+  <section class="container-fluid shopcontainer ">
     <!-- Product Grid -->
-    <section class="product-grid">
+    <div class="product-grid ">
+      <div class="row">
       <% if (products && products.length > 0) { %>
         <% products.forEach(function(product) { %>
-          <div class="product-card">
-            <a href="/productDetails/<%= product._id %>">
-              <img src="/<%= product.images[0] %>" alt="<%= product.name %>">
-              <p><%= product.name %></p>
-              <span>₹<%= product.offerPrice ? product.offerPrice : product.price %></span>
-            </a>
+          <div class="col-md-3 col-sm-6 mb-4"> <!-- 4 products per row on medium screens, 2 per row on smaller screens -->
+            <div class="product-card">
+              <a href="/productDetails/<%= product._id %>">
+                <img src="/<%= product.images[0] %>" alt="<%= product.name %>" class="img-fluid">
+                <p><%= product.name %></p>
+                <span>₹<%= product.offerPrice ? product.offerPrice : product.price %></span>
+              </a>
+            </div>
           </div>
         <% }); %>
       <% } else { %>
         <p>No products found.</p>
       <% } %>
+      </div>
+    </div>
     </section>
-    
-    
-  </div>
 
   <%- include("./layouts/footer.ejs") %>
 
