--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -27,6 +27,16 @@
 	<body>
 
 		<%- include("./layouts/header.ejs") %>
+    <nav aria-label="breadcrumb" class="mb-4">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="/home" class="d-flex align-items-center">
+            <span style="color: rgb(27, 94, 27);">Home</span>
+          </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">cart</li>
+      </ol>
+    </nav>
 
 		<!-- Start Hero Section -->
 			<div class="hero">
