--- a/views/users/contact.ejs
+++ b/views/users/contact.ejs
@@ -27,6 +27,16 @@
 	<body>
 
 		<%- include("./layouts/header.ejs") %>
+    <nav aria-label="breadcrumb" class="mb-4">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="/home" class="d-flex align-items-center">
+            <span style="color: rgb(27, 94, 27);">Home</span>
+          </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">contact</li>
+      </ol>
+    </nav>
 
 		<!-- Start Hero Section -->
 			<div class="hero">
@@ -35,13 +45,8 @@
 						<div class="col-lg-5">
 							<div class="intro-excerpt">
 								<h1>Contact</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
-							</div>
-						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
+								<p class="mb-4">At Men's Hub, we're here for any inquiries or support you need. 
+                  Reach out, and we'll respond quickly to assist you!</p>
 							</div>
 						</div>
 					</div>
@@ -70,7 +75,8 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                      <p>66 TIRUR,MALAPPURAM,
+                        676301</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -83,7 +89,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>info@yourdomain.com</p>
+                      <p>menshub@gmail.com</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
@@ -96,7 +102,7 @@
                       </svg>
                     </div> <!-- /.icon -->
                     <div class="service-contents">
-                      <p>+1 294 3925 3939</p>
+                      <p>+91 7658900345</p>
                     </div> <!-- /.service-contents-->
                   </div> <!-- /.service -->
                 </div>
