--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -31,42 +31,38 @@
     <div class="container-scroller">
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
-        <div
-          class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top"
-        >
-          <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB</a>
-          <a class="sidebar-brand brand-logo-mini" href="index.html"
-            ><img src="assets/images/logo-mini.svg" alt="logo"
-          /></a>
+        <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
+          <a class="sidebar-brand brand-logo" href="index.html">MEN'S HUB </a>
+          <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="/images/logo-mini.svg" alt="logo" /></a>
         </div>
         <ul class="nav">
           <li class="nav-item menu-items">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="#">
               <span class="menu-title">Dashboard</span>
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="users.html">
+            <a class="nav-link" href="/admin/usermanagement">
               <span class="menu-title">User Management</span>
             </a>
           </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="products.html">
+          <li class="nav-item menu-items forme">
+            <a class="nav-link" href="/admin/products">
               <span class="menu-title">Products Management</span>
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="orders.html">
+            <a class="nav-link" href="#">
               <span class="menu-title">Order Management</span>
             </a>
           </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="category.html">
-              <span class="menu-title">Category Management</span>
+          <li class="nav-item menu-items " >
+            <a class="nav-link" href="/admin/categorymanagement">
+              <span class="menu-title" >Category Management</span>
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="coupens.html">
+            <a class="nav-link" href="#">
               <span class="menu-title">Coupen Management</span>
             </a>
           </li>
