--- a/views/users/about.ejs
+++ b/views/users/about.ejs
@@ -5,120 +5,167 @@
 * Template URI: https://untree.co/
 * License: https://creativecommons.org/licenses/by/3.0/
 */ -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="favicon.png">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="author" content="Untree.co" />
+    <link rel="shortcut icon" href="favicon.png" />
 
-  <meta name="description" content="" />
-  <meta name="keywords" content="bootstrap, bootstrap4" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="bootstrap, bootstrap4" />
 
-		<!-- Bootstrap CSS -->
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-		<link href="/css/tiny-slider.css" rel="stylesheet" />
-		<link rel="stylesheet" href="/css/style.css">
-		<link href="/css/bootstrap.min.css" rel="stylesheet" />
-		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
-	</head>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link href="/css/tiny-slider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <title>About Us</title>
+  </head>
 
-	<body>
+  <body>
+    <%- include("./layouts/header.ejs") %>
+		<nav aria-label="breadcrumb" class="mb-4">
+			<ol class="breadcrumb">
+				<!-- Home link with icon -->
+				<li class="breadcrumb-item" style="color: rgb(27, 94, 27);">
+					<a href="/home" class="d-flex align-items-center">
+						<span style="color: rgb(27, 94, 27);">Home</span>
+					</a>
+				</li>
+				<li class="breadcrumb-item active" aria-current="page">About</li>
+			</ol>
+		</nav>
 
-		<%- include("./layouts/header.ejs") %>
+    <!-- Start Hero Section -->
+    <div class="hero">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-5">
+            <div class="intro-excerpt">
+              <h1>About Us</h1>
+              <p class="mb-4">
+                At Men's Hub, we bring you the latest in men's fashion with a
+                focus on quality and style. Our goal is to make shopping easy
+                and enjoyable. Elevate your wardrobe with confidence!
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-7"></div>
+        </div>
+      </div>
+    </div>
+    <!-- End Hero Section -->
 
-		<!-- Start Hero Section -->
-			<div class="hero">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-5">
-							<div class="intro-excerpt">
-								<h1>About Us</h1>
-								<p class="mb-4">Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
-								<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#" class="btn btn-white-outline">Explore</a></p>
-							</div>
-						</div>
-						<div class="col-lg-7">
-							<div class="hero-img-wrap">
-								<img src="images/couch.png" class="img-fluid">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		<!-- End Hero Section -->
+    <!-- Start Why Choose Us Section -->
+    <div class="why-choose-section">
+      <div class="container">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-lg-6">
+            <h2 class="section-title">Why Choose Us</h2>
+            <p>
+              At Men's Hub, we prioritize quality, style, and customer
+              satisfaction. Our handpicked collections are designed for modern
+              men who value both fashion and comfort. With fast shipping, easy
+              returns, and excellent support, shopping with us is always a
+              seamless experience!.
+            </p>
 
-		
+            <div class="row my-5">
+              <div class="col-6 col-md-6">
+                <div class="feature">
+                  <div class="icon">
+                    <img src="images/truck.svg" alt="Image" class="imf-fluid" />
+                  </div>
+                  <h3>Fast &amp; Free Shipping</h3>
+                  <p>
+                    Enjoy free shipping on all orders at Men's Hub! We ensure
+                    your favorite styles arrive quickly and hassle-free. Shop
+                    now an d experience fast delivery straight to your door!
+                  </p>
+                </div>
+              </div>
 
-		<!-- Start Why Choose Us Section -->
-		<div class="why-choose-section">
-			<div class="container">
-				<div class="row justify-content-between align-items-center">
-					<div class="col-lg-6">
-						<h2 class="section-title">Why Choose Us</h2>
-						<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit imperdiet dolor tempor tristique.</p>
+              <div class="col-6 col-md-6">
+                <div class="feature">
+                  <div class="icon">
+                    <img src="images/bag.svg" alt="Image" class="imf-fluid" />
+                  </div>
+                  <h3>Easy to Shop</h3>
+                  <p>
+                    Shopping at Men's Hub is a breeze! Our user-friendly website
+                    allows you to browse, filter, and find your perfect styles
+                    effortlessly. Enjoy a seamless shopping experience from
+                    start to finish!
+                  </p>
+                </div>
+              </div>
 
-						<div class="row my-5">
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/truck.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Fast &amp; Free Shipping</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
+              <div class="col-6 col-md-6">
+                <div class="feature">
+                  <div class="icon">
+                    <img
+                      src="images/support.svg"
+                      alt="Image"
+                      class="imf-fluid"
+                    />
+                  </div>
+                  <h3>24/7 Support</h3>
+                  <p>
+                    At Men's Hub, we're here for you around the clock! Our
+                    dedicated support team is available 24/7 to answer your
+                    questions and assist with any issues. Shop with confidence
+                    knowing help is just a click away!
+                  </p>
+                </div>
+              </div>
 
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/bag.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Easy to Shop</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
+              <div class="col-6 col-md-6">
+                <div class="feature">
+                  <div class="icon">
+                    <img
+                      src="images/return.svg"
+                      alt="Image"
+                      class="imf-fluid"
+                    />
+                  </div>
+                  <h3>Hassle Free Returns</h3>
+                  <p>
+                    At Men's Hub, we believe in making your shopping experience
+                    stress-free. If you're not completely satisfied with your
+                    purchase, our hassle-free return policy allows you to return
+                    items easily and quickly. Shop with confidence, knowing you
+                    can return what doesn't work for you!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
 
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/support.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>24/7 Support</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
+          <div class="col-lg-5">
+            <div class="img-wrap">
+              <img
+                src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png"
+                alt="Image"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-							<div class="col-6 col-md-6">
-								<div class="feature">
-									<div class="icon">
-										<img src="images/return.svg" alt="Image" class="imf-fluid">
-									</div>
-									<h3>Hassle Free Returns</h3>
-									<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate.</p>
-								</div>
-							</div>
+    <%- include("./layouts/footer.ejs") %>
 
-						</div>
-					</div>
-
-					<div class="col-lg-5">
-						<div class="img-wrap">
-							<img src="images/why-choose-us-img.jpg" alt="Image" class="img-fluid">
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<%- include("./layouts/footer.ejs") %>
-
-
-		<script src="js/bootstrap.bundle.min.js"></script>
-		<script src="js/tiny-slider.js"></script>
-		<script src="js/custom.js"></script>
-	</body>
-
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
 </html>
