--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -65,16 +65,9 @@
             </li>
             <li><a class="nav-link" href="/shop">Shop</a></li>
             <li><a class="nav-link" href="/about">About us</a></li>
-            <li><a class="nav-link" href="/services">Services</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
+            <li><a class="nav-link" href="/service">My Account</a></li>
           </ul>
-          <!-- <ul class="neddit">
-            <li class="neddit1">
-              <p style="margin-left: 11px; margin-bottom:0; color:rgb(185, 182, 182)">Welcome</p>
-              <p style="color: rgb(185, 182, 182);">/</p>
-            </li>
-          </ul> -->
-    
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li>
               <a href="wishlist.html">
@@ -83,7 +76,7 @@
             </li>
             <li>
               <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
-             
+            
             </li>
             <li>
               <a class="nav-link" href="cart.html"
