--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -20,16 +20,12 @@
     <div class="collapse navbar-collapse" id="navbarsFurni">
       <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li><a class="nav-link" href="shop.html">Shop</a></li>
-        <li><a class="nav-link" href="about.html">About us</a></li>
-        <li><a class="nav-link" href="services.html">Services</a></li>
-        <li><a class="nav-link" href="blog.html">Blog</a></li>
-        <li><a class="nav-link" href="contact.html">Contact us</a></li>
-        
+          <a class="nav-link" href="/home">Home</a>
+        <li><a class="nav-link" href="/shop">Shop</a></li>
+        <li><a class="nav-link" href="/about">About us</a></li>
+        <li><a class="nav-link" href="/contact">Contact us</a></li>
+        <li><a class="nav-link" href="#">MY Account</a></li>       
       </ul>
-
       <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
         <li>
           <a href="wishlist.html">
