--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= product.name %> - Product Details</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="/css/tiny-slider.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/pdtDetails.css" />
     <link rel="stylesheet" href="/css/style.css" />
@@ -11,6 +12,16 @@
   </head>
   <body>
     <%- include("./layouts/header.ejs") %>
+    <nav aria-label="breadcrumb" class="mb-4">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="/home" class="d-flex align-items-center">
+            Home
+          </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page" style="color: rgb(27, 94, 27);">Wishlists</li>
+      </ol>
+    </nav>
 
     <div class="container mt-5 product-detail-container">
       <% if (product) { %>
@@ -46,14 +57,18 @@
               product.price %></span
             >
             <span class="original-price">&#8377;<%= product.price %></span>
-            <span class="discount">25% Off</span>
+            <% if (product.offerPrice && product.offerPrice < product.price) { %>
+              <span class="discount">
+                <%= Math.round(((product.price - product.offerPrice) / product.price) * 100) %>% Off
+              </span>
+            <% } %>
           </p>
           <p class="description"><%= product.description %></p>
 
           <ul class="features">
-            <li>1 Year Brand Warranty</li>
-            <li>30 Days Return Policy</li>
-            <li>Cash on Delivery Available</li>
+            <li><%= product.warranty%></li>
+            <li><%= product. returnPolicy%></li>
+            <li>cash On Delivery :<%= product.cashOnDelivery%></li>
           </ul>
 
           <!-- Color and Size Options -->
@@ -63,7 +78,7 @@
               <% product.colors.forEach(color => { %>
               <button
                 class="color-option"
-                style="background-color: <%= color %>"
+                style="background-color:<%= color %>"
               ></button>
               <% }) %>
             </div>
@@ -77,11 +92,18 @@
               <% }) %>
             </div>
           </div>
-
+            <div>
+              <% if(product.stock > 0){ %>
+                <p style="color: green;">In Stock:<%= product.stock %></p>
+                <% }else{ %>
+                  <p style="color: red;">Out of Stock</p>
+              <% } %>
+            </div>
           <!-- Add to Cart and Buy Now -->
           <div class="actions mt-3">
             <button class="btn btn-primary">Add to Cart</button>
             <button class="btn btn-warning">Buy Now</button>
+            <img class="heart-icon" src="/images/img/wishicon/icons8-heart-64.png" alt="">
           </div>
         </div>
       </div>
