--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop - Products</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/shop.css">
   <link href="/css/bootstrap.min.css" rel="stylesheet" />
@@ -11,9 +12,20 @@
 <body>
   <%- include("./layouts/header.ejs") %>
 
-  <section class="container-fluid shopcontainer ">
-    <!-- Product Grid -->
-    <div class="product-grid ">
+  <nav aria-label="breadcrumb" class="mb-4">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="/home" class="d-flex align-items-center">
+          Home
+        </a>
+      </li>
+      <li class="breadcrumb-item active" aria-current="page">Shop</li>
+    </ol>
+  </nav>
+
+  <!-- Product Grid -->
+  <section class="container-fluid shopcontainer">
+    <div class="product-grid">
       <div class="row">
       <% if (products && products.length > 0) { %>
         <% products.forEach(function(product) { %>
@@ -32,7 +44,7 @@
       <% } %>
       </div>
     </div>
-    </section>
+  </section>
 
   <%- include("./layouts/footer.ejs") %>
 
