--- a/views/users/starting.ejs
+++ b/views/users/starting.ejs
@@ -32,8 +32,7 @@
 <link rel="stylesheet" href="/css/style.css">
 <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <title>
-      Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites
-      by Untree.co
+      Starting of men's hub
     </title>
   </head>
 
@@ -65,7 +64,6 @@
             </li>
             <li><a class="nav-link" href="/shop">Shop</a></li>
             <li><a class="nav-link" href="/about">About us</a></li>
-            <li><a class="nav-link" href="/services">Services</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
           </ul>
           <ul class="neddit">
